--- a/www/views/advancedSettings.html
+++ b/www/views/advancedSettings.html
@@ -12,7 +12,7 @@
         <span class="toggle-label" translate>Use Server Side PoW</span>
       </ion-toggle>
       <div class="comment" translate>
-        If enabled, Proof Of Work is delegated to the Canoe server side. This option is disabled and always true on mobile Canoe for now.
+        If enabled, Proof Of Work is delegated to the NOS server side. This option is disabled and always true on mobile NOS for now.
       </div>
 
       <div class="item item-divider"></div>
