--- a/www/views/tab-settings.html
+++ b/www/views/tab-settings.html
@@ -64,7 +64,7 @@
         <i class="icon bp-arrow-right"></i>
       </a-->
 
-      <a class="item has-setting-value item-icon-left item-icon-right" ui-sref="tabs.language">
+<!--       <a class="item has-setting-value item-icon-left item-icon-right" ui-sref="tabs.language">
        <i class="icon big-icon-svg">
          <img src="img/icon-language.svg" class="bg"/>
        </i>
@@ -73,7 +73,7 @@
          {{currentLanguageName|translate}}
        </span>
        <i class="icon bp-arrow-right"></i>
-     </a>
+     </a> -->
 
     <a class="item has-setting-value item-icon-left item-icon-right" ui-sref="tabs.altCurrency">
       <i class="icon big-icon-svg">
