--- a/www/views/tab-home.html
+++ b/www/views/tab-home.html
@@ -48,7 +48,7 @@
         </i>
       </div>
       <div class="title" translate>
-        Your NEURO Wallet is ready!
+        Your NOLLAR Wallet is ready!
       </div>
       <div class="subtitle" translate>
         On this screen you can see all your accounts. Check our <a ng-click="openExternalLinkHelp()">FAQs</a> before you start!
