--- a/www/views/tab-send.html
+++ b/www/views/tab-send.html
@@ -31,11 +31,11 @@
           </i>
         </div>
         <div class="title" translate>
-          Start sending NEURO
+          Start sending NOLLAR
         </div>
         <div class="subtitle">
-          <span ng-show="hasAccounts" translate>To get started, you need NEURO. Share your account to receive NEURO.</span>
-          <span ng-show="!hasAccounts" translate>To get started, you need an Account in your wallet to receive NEURO.</span>
+          <span ng-show="hasAccounts" translate>To get started, you need NOLLAR. Share your account to receive NOLLAR.</span>
+          <span ng-show="!hasAccounts" translate>To get started, you need an Account in your wallet to receive NOLLAR.</span>
           <div class="padding">
 <!--            <button class="button button-standard button-primary" ng-click="Nano()" ng-show="hasAccounts" translate>Buy Nano</button>-->
             <button class="button button-standard button-primary" ng-click="createAccount()" ng-show="!hasAccounts" translate>Create Account</button>
