--- a/www/views/tab-settings.html
+++ b/www/views/tab-settings.html
@@ -123,7 +123,7 @@
         <i class="icon big-icon-svg">
           <img src="img/icon-howto-buy.svg" class="bg"/>
         </i>
-        <span>{{'How to buy NEURO' | translate}}</span>
+        <span>{{'How to buy NOLLAR' | translate}}</span>
         <i class="icon bp-arrow-right"></i>
       </a>
 
