--- a/www/views/addressbook.view.html
+++ b/www/views/addressbook.view.html
@@ -32,7 +32,7 @@
       </div>
       <div class="item item-divider"></div>
       <div class="item item-icon-right has-click" ng-click="sendTo()">
-        <span class="positive" translate>Send NEURO</span>
+        <span class="positive" translate>Send NOS</span>
         <i class="icon bp-arrow-right"></i>
       </div>
       <div class="item item-divider"></div>
