--- a/www/views/includes/terms.html
+++ b/www/views/includes/terms.html
@@ -7,7 +7,7 @@
   </p>
   <p>
     This is open source and what you do with NOS is YOUR responsibility.<br>
-    Or to put it more clearly - if you fumble the ball and lose all your NEURO - you are on your own. :)
+    Or to put it more clearly - if you fumble the ball and lose all your NOS - you are on your own. :)
   </p>
   <p class="terms__heading">
     LICENSE
