--- a/www/views/onboarding/tour.html
+++ b/www/views/onboarding/tour.html
@@ -15,8 +15,8 @@
   <ion-slides class="slides" options="options" slider="data.slider">
     <ion-slide-page>
       <ion-content id="onboard-tour-secure" scroll="false">
-        <div class="onboarding-topic" translate>NEURO is Instant</div>
-        <div class="onboarding-description" translate>Transfer NEURO instantly to anyone, anywhere.</div>
+        <div class="onboarding-topic" translate>NOS is Instant</div>
+        <div class="onboarding-description" translate>Transfer NOS instantly to anyone, anywhere.</div>
         <div class="onboarding-illustration-secure"></div>
         <div class="cta-buttons">
           <div class="onboarding-tldr" translate>Just scan and pay.</div>
@@ -28,8 +28,8 @@
     </ion-slide-page>
     <ion-slide-page>
       <ion-content id="onboard-tour-currency" scroll="false">
-        <div class="onboarding-topic" translate>NEURO is Feeless and Stable</div>
-        <div class="onboarding-description" translate>NEURO is tied to the Euro. </div>
+        <div class="onboarding-topic" translate>NOS is Feeless and Stable</div>
+        <div class="onboarding-description" translate>NOS is tied to the USD. </div>
         <div class="onboarding-illustration-currency">
         </div>
         <div class="cta-buttons">
@@ -42,8 +42,8 @@
     </ion-slide-page>
     <ion-slide-page>
       <ion-content id="onboard-tour-control" scroll="false">
-        <div class="onboarding-topic" translate>NEURO is Secure</div>
-        <div class="onboarding-description" translate>Canoe stores your NEURO securely.</div>
+        <div class="onboarding-topic" translate>NOS is Secure</div>
+        <div class="onboarding-description" translate>App stores your NOS securely.</div>
         <div class="onboarding-illustration-control"></div>
         <div class="cta-buttons">
           <div class="onboarding-tldr" translate>But do not lose your seed!</div>
