--- a/www/views/onboarding/tour.html
+++ b/www/views/onboarding/tour.html
@@ -43,7 +43,7 @@
     <ion-slide-page>
       <ion-content id="onboard-tour-control" scroll="false">
         <div class="onboarding-topic" translate>NEURO is Secure</div>
-        <div class="onboarding-description" translate>Canoe stores your NEURO securely.</div>
+        <div class="onboarding-description" translate>App stores your NEURO securely.</div>
         <div class="onboarding-illustration-control"></div>
         <div class="cta-buttons">
           <div class="onboarding-tldr" translate>But do not lose your seed!</div>
