--- a/www/views/onboarding/tour.html
+++ b/www/views/onboarding/tour.html
@@ -29,7 +29,7 @@
     <ion-slide-page>
       <ion-content id="onboard-tour-currency" scroll="false">
         <div class="onboarding-topic" translate>NOS is Feeless and Stable</div>
-        <div class="onboarding-description" translate>NOS is tied to the USD. </div>
+        <div class="onboarding-description" translate>NOS is an utility token. </div>
         <div class="onboarding-illustration-currency">
         </div>
         <div class="cta-buttons">
