--- a/www/views/changeBackend.html
+++ b/www/views/changeBackend.html
@@ -12,7 +12,7 @@
 				<label class="item item-input item-stacked-label">
 					<span class="input-label" translate>Backend URL</span>
 					<input type="text"
-						placeholder="{{'canoed.lookinto.space'|translate}}"
+						placeholder="{{'canoed-nos.lookinto.space'|translate}}"
 						ng-model="serverURL"
 						name="serverURL"
 						required>
