minor text changes

--- a/www/views/onboarding/tour.html
+++ b/www/views/onboarding/tour.html
@@ -28,8 +28,8 @@
     </ion-slide-page>
     <ion-slide-page>
       <ion-content id="onboard-tour-currency" scroll="false">
-        <div class="onboarding-topic" translate>NOS is Feeless and Stable</div>
-        <div class="onboarding-description" translate>NOS is an utility token. </div>
+        <div class="onboarding-topic" translate>NOS is Feeless and Instant</div>
+        <div class="onboarding-description" translate>NOS is a utility token. </div>
         <div class="onboarding-illustration-currency">
         </div>
         <div class="cta-buttons">
