--- a/www/views/onboarding/tour.html
+++ b/www/views/onboarding/tour.html
@@ -28,7 +28,7 @@
     </ion-slide-page>
     <ion-slide-page>
       <ion-content id="onboard-tour-currency" scroll="false">
-        <div class="onboarding-topic" translate>NOLLAR is Feeless and Stable</div>
+        <div class="onboarding-topic" translate>NOLLAR is feeless and price-stable</div>
         <div class="onboarding-description" translate>NOLLAR is tied to the USD. </div>
         <div class="onboarding-illustration-currency">
         </div>
