Remove alternative currency
Alternative ballance removed everytwhere


Remove missing alternative amount


Missing alternative ballance string

--- a/www/views/amount.html
+++ b/www/views/amount.html
@@ -66,8 +66,6 @@
         </div>
         <div ng-class="{'amount__results--minimize': smallFont, 'amount__results--standard': !smallFont, 'amount__results--placeholder': amountResult}" ng-click="changeAlternativeUnit()">
           <div class="amount__result" ng-show="globalResult">{{globalResult}} {{unit}}</div>
-          <div class="amount__result-equiv" ng-show="alternativeAmount">&asymp; {{alternativeAmount || '0.00'}} {{alternativeUnit}}</div>
-          <div class="amount__result-equiv" ng-show="!alternativeAmount">&nbsp;</div>
         </div>
       </div>
     </div>
@@ -118,7 +116,7 @@
         {{acc.name || acc.id}}
       </span>
       <p>
-        <span ng-if="!acc.meta.balanceHidden && acc.alternativeBalanceStr"> {{acc.balanceStr}} <span ng-hide="acc.alternativeBalanceStr == 'hide'">&asymp; {{acc.alternativeBalanceStr}}</span></span>
+        <span ng-if="!acc.meta.balanceHidden && acc.alternativeBalanceStr"> {{acc.balanceStr}}</span>
         <span ng-if="acc.meta.balanceHidden" translate>[Balance Hidden]</span>
         <span class="assertive" ng-if="acc.error">{{acc.error}}</span>
         &nbsp;
