--- a/www/views/tab-receive.html
+++ b/www/views/tab-receive.html
@@ -37,7 +37,7 @@
         {{account.name || account.id}}
       </span>
       <p>
-        <span ng-if="!account.meta.balanceHidden && account.alternativeBalanceStr"> {{account.balanceStr}} <span ng-hide="account.alternativeBalanceStr == 'hide'">&asymp; {{account.alternativeBalanceStr}}</span></span>
+        <span ng-if="!account.meta.balanceHidden && account.alternativeBalanceStr"> {{account.balanceStr}}</span>
         <span ng-if="account.meta.balanceHidden" translate>[Balance Hidden]</span>
         <span class="assertive" ng-if="account.error">{{account.error}}</span>
         &nbsp;
