--- a/www/views/tab-settings.html
+++ b/www/views/tab-settings.html
@@ -75,7 +75,7 @@
        <i class="icon bp-arrow-right"></i>
      </a> -->
 
-    <a class="item has-setting-value item-icon-left item-icon-right" ui-sref="tabs.altCurrency">
+<!--     <a class="item has-setting-value item-icon-left item-icon-right" ui-sref="tabs.altCurrency">
       <i class="icon big-icon-svg">
         <img src="img/icon-alternative-currency.svg" class="bg"/>
       </i>
@@ -84,7 +84,7 @@
         {{selectedAlternative.name}}
       </span>
       <i class="icon bp-arrow-right"></i>
-    </a>
+    </a> -->
 
     <a class="item item-icon-left item-icon-right" ui-sref="tabs.preferencesSecurity">
       <i class="icon big-icon-svg ion-ios-locked-outline" ng-if="locked"></i>
