Hide "View on Nanode" button

--- a/www/views/tx-details.html
+++ b/www/views/tx-details.html
@@ -99,9 +99,9 @@
       </div>
     </div>
 
-    <button ng-if="ntx" class="button button-standard button-primary" ng-click="viewOnNanode()" translate>
+<!--     <button ng-if="ntx" class="button button-standard button-primary" ng-click="viewOnNanode()" translate>
       View on Nanode
-    </button>
+    </button> -->
 
     <button ng-if="ntx.origin && (ntx.type === 'receive' || ntx.type === 'open')" class="button button-standard button-primary" ng-click="refund()" ng-show="hasFunds" translate>Refund</button>
 
