--- a/www/views/onboarding/tour.html
+++ b/www/views/onboarding/tour.html
@@ -19,7 +19,7 @@
         <div class="onboarding-description" translate>Transfer NOLLAR instantly to anyone, anywhere.</div>
         <div class="onboarding-illustration-secure"></div>
         <div class="cta-buttons">
-          <div class="onboarding-tldr" translate>Just scan and pay.</div>
+          <div class="onboarding-tldr" translate>Never wait for transfers again!</div>
           <button class="button button-standard button-primary" ng-click="slideNext()" translate>
             Got it
           </button>
