--- a/www/views/preferencesAbout.html
+++ b/www/views/preferencesAbout.html
@@ -16,13 +16,13 @@
           v{{version}}
         </span>
       </div>
-      <div class="item item-icon-left" ng-click="openExternalLink()">
+<!--       <div class="item item-icon-left" ng-click="openExternalLink()">
         <i class="icon ion-social-github-outline"></i>
         <span translate>Commit hash</span>
         <span class="item-note">
           #{{commitHash}}
         </span>
-      </div>
+      </div> -->
       <div class="item item-divider">
       </div>
       <a class="item item-icon-left item-icon-right" ui-sref="tabs.about.termsOfUse">
