--- a/www/views/amount.html
+++ b/www/views/amount.html
@@ -59,11 +59,11 @@
       <div class="amount">
         <div class="amount__editable" ng-class="{'amount__editable--minimize': smallFont, 'amount__editable--standard': !smallFont, 'amount__editable--placeholder': !amount}">
           <span class="amount__number">{{amount || "0.00" }}</span>
-          <a class="amount__currency-toggle" ng-click="changeUnit()">
-            {{unit}}
-            <span class="icon ion-loop"></span>
-          </a>
-        </div>
+<!--           <a class="amount__currency-toggle" ng-click="changeUnit()">
+ -->            {{unit}}
+<!--             <span class="icon ion-loop"></span> -->
+<!--           </a>
+ -->        </div>
         <div ng-class="{'amount__results--minimize': smallFont, 'amount__results--standard': !smallFont, 'amount__results--placeholder': amountResult}" ng-click="changeAlternativeUnit()">
           <div class="amount__result" ng-show="globalResult">{{globalResult}} {{unit}}</div>
         </div>
