Add adblocker warning

--- a/www/views/tab-home.html
+++ b/www/views/tab-home.html
@@ -51,7 +51,8 @@
         Your NOLLAR Wallet is ready!
       </div>
       <div class="subtitle" translate>
-        On this screen you can see all your accounts. Check our <a ng-click="openExternalLinkHelp()">FAQs</a> before you start!
+        On this screen you can see all your accounts. Check our <a ng-click="openExternalLinkHelp()">FAQs</a> before you start!<br />
+        Important: Deactivate Adblocker to use this wallet
       </div>
     </div>
 
